# Gustav-CLI

./: COMMANDS.md  README.md  pyproject.toml
src/cli/: main.py  setup.py
